[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.*",
    "/doc-site",
    "/dist",
    "/tests",
    "/utils",
]

[project]
name = "slambda"
version = "0.0.3"
authors = [
    { name = "Hao Wu", email = "haowu@dataset.sh" },
]
description = "Making LLMs Calls Simple: Use LLMs Inference as Easy as a Regular Function!"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "pydantic >= 2.0.0",
    "openai"
]
license = { text = "MIT License" }

[project.urls]
"Homepage" = "https://slambda.dataset.sh"
"Bug Tracker" = "https://github.com/dataset-sh/slambda/issues"
