[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [
    "/.*",
    "/dist",
    "/doc-site",
    "/slambda-playground",
    "/tests",
    "/utils",
]

artifacts = [
    "playground.frontend"
]

[project]
name = "slambda"
version = "0.0.11"
authors = [
    { name = "Hao Wu", email = "haowu@dataset.sh" },
]
description = "Instruction is Function!"
readme = "readme.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
    "pydantic >= 2.0.0",
    "openai"
]
license = { text = "MIT License" }

[project.urls]
"Homepage" = "https://slambda.dataset.sh"
"Bug Tracker" = "https://github.com/dataset-sh/slambda/issues"

